# esn-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: narma.rs  ridge.rs  rls.rs  xor.rs
log/: sample.json
src/: echo_state_network.rs  lib.rs  model.rs  optimizer.rs  physical_reservoir.rs  plot.rs  reservoir_computing.rs  serialize.rs  utils.rs
src/model/: feedback.rs  input.rs  output.rs  regularization.rs  reservoir.rs
src/optimizer/: ridge.rs  rls.rs
src/reservoir_computing/: deep_esn.rs  echo_state_network.rs  physical_reservoir.rs
tools/: install_ubuntu_dependencies.sh
