[package]
name = "echo-state-network"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
rand = "0.8"
rand_distr = "0.4"
petgraph = "0.6"
petgraph-gen = "0.1"
plotters = "0.3"
env_logger = "0.11"
log = "0.4"
assert_approx_eq = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[[bin]]
name = "xor"
path = "src/bin/xor.rs"
