[package]
name = "echo-state-network"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "A Rust library for Echo State Networks"
repository = "https://github.com/kaaatsu32329/esn-rs"

[features]
default = ["plot"]
plot = ["plotters"]

[dependencies]
assert_approx_eq = "1"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
petgraph = "0.6"
petgraph-gen = "0.1"
plotters = { version = "0.3", optional = true }
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
